# cbpr-validate

./: .gitignore  BUILD_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
learning_guide/: Phase0_README.md  Phase1-2_verification.md
src/cbpr_validate/: cli.py
src/cbpr_validate/model/: __init__.py  finding.py  payment.py  validation_result.py
src/cbpr_validate/parsers/: detect.py  pacs008.py
src/cbpr_validate/rules/: address.py  registry.py
tests/: test_misc_coverage.py  test_parsers.py  test_rules_address.py  test_smoke.py
