[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbpr-validate"
version = "0.1.0"
description = "Validate ISO 20022 CBPR+ payment messages against the usage guidelines, not just the XSD."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Tarun Pandya" }]
dependencies = [
    "pydantic>=2",
    "lxml>=5",
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
cbpr-validate = "cbpr_validate.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cbpr_validate"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true

[[tool.mypy.overrides]]
module = "lxml.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cbpr_validate --cov-report=term-missing"

[tool.coverage.run]
source = ["src/cbpr_validate"]
